--- a/src/epub/text/preface-2.xhtml
+++ b/src/epub/text/preface-2.xhtml
@@ -102,7 +102,7 @@
 			<p>
 				<span>'Tis true, some have of late, to counterfeit</span>
 				<br/>
-				<span>My Pilgrim, to their own my title set;<a href="endnotes.xhtml#note-part2-1" id="noteref-part2-1" epub:type="noteref">1</a></span>
+				<span>My Pilgrim, to their own my title set;<a href="endnotes.xhtml#note-593" id="noteref-593" epub:type="noteref">593</a></span>
 				<br/>
 				<span>Yea others, half my name and title too</span>
 				<br/>
@@ -146,7 +146,7 @@
 				<br/>
 				<span>What shall I do, when I at such a door</span>
 				<br/>
-				<span>For Pilgrims ask, and they shall rage the more?<a href="endnotes.xhtml#note-part2-2" id="noteref-part2-2" epub:type="noteref">2</a></span>
+				<span>For Pilgrims ask, and they shall rage the more?<a href="endnotes.xhtml#note-594" id="noteref-594" epub:type="noteref">594</a></span>
 			</p>
 			<p>ANSWER.</p>
 			<p>
@@ -186,7 +186,7 @@
 				<br/>
 				<span>Yet more; so comely doth my Pilgrim walk,</span>
 				<br/>
-				<span>That of him thousands daily sing and talk.<a href="endnotes.xhtml#note-part2-3" id="noteref-part2-3" epub:type="noteref">3</a></span>
+				<span>That of him thousands daily sing and talk.<a href="endnotes.xhtml#note-595" id="noteref-595" epub:type="noteref">595</a></span>
 			</p>
 			<p>
 				<span>If you draw nearer home, it will appear,</span>
@@ -252,7 +252,7 @@
 				<br/>
 				<span>Now they have seen and heard him, him commend</span>
 				<br/>
-				<span>And to those whom they love, they do him send.<a href="endnotes.xhtml#note-part2-4" id="noteref-part2-4" epub:type="noteref">4</a></span>
+				<span>And to those whom they love, they do him send.<a href="endnotes.xhtml#note-596" id="noteref-596" epub:type="noteref">596</a></span>
 			</p>
 			<p>
 				<span>Wherefore, my Second Part, thou need'st not be</span>
@@ -332,7 +332,7 @@
 				<br/>
 				<span>What CHRISTIAN left lock'd up, and went his way,</span>
 				<br/>
-				<span>Sweet CHRISTIANA opens with her key.<a href="endnotes.xhtml#note-part2-5" id="noteref-part2-5" epub:type="noteref">5</a></span>
+				<span>Sweet CHRISTIANA opens with her key.<a href="endnotes.xhtml#note-597" id="noteref-597" epub:type="noteref">597</a></span>
 			</p>
 			<p>OBJECTION 4.</p>
 			<p>
