--- a/src/epub/text/preface-1.xhtml
+++ b/src/epub/text/preface-1.xhtml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>The Author's Apology for His Book</title>
+		<title>The Author’s Apology for His Book</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface-1" epub:type="preface">
-			<h2>The Author's Apology for His Book</h2>
+			<h2>The Author’s Apology for His Book</h2>
 			<p>
 				<span>When at the first I took my pen in hand</span>
 				<br/>
@@ -41,7 +41,7 @@
 			<p>
 				<span>Nay, then, thought I, if that you breed so fast,</span>
 				<br/>
-				<span>I'll put you by yourselves, lest you at last</span>
+				<span>I’ll put you by yourselves, lest you at last</span>
 				<br/>
 				<span>Should prove ad infinitum, and eat out</span>
 				<br/>
@@ -138,14 +138,14 @@
 				<br/>
 				<span>Yea, that I might them better palliate,</span>
 				<br/>
-				<span>I did too with them thus expostulate:--</span>
+				<span>I did too with them thus expostulate:⁠—</span>
 			</p>
 			<p>
 				<span>May I not write in such a style as this?</span>
 				<br/>
 				<span>In such a method, too, and yet not miss</span>
 				<br/>
-				<span>My end--thy good? Why may it not be done?</span>
+				<span>My end⁠—thy good? Why may it not be done?</span>
 				<br/>
 				<span>Dark clouds bring waters, when the bright bring none.</span>
 				<br/>
@@ -180,7 +180,7 @@
 				<br/>
 				<span>They must be groped for, and be tickled too,</span>
 				<br/>
-				<span>Or they will not be catch'd, whate'er you do.</span>
+				<span>Or they will not be catch’d, whate’er you do.</span>
 			</p>
 			<p>
 				<span>How does the fowler seek to catch his game</span>
@@ -191,7 +191,7 @@
 				<br/>
 				<span>He creeps, he goes, he stands; yea, who can tell</span>
 				<br/>
-				<span>Of all his postures? Yet there's none of these</span>
+				<span>Of all his postures? Yet there’s none of these</span>
 				<br/>
 				<span>Will make him master of what fowls he please.</span>
 				<br/>
@@ -200,7 +200,7 @@
 				<span>Yet, if he does so, that bird he will miss.</span>
 			</p>
 			<p>
-				<span>If that a pearl may in a toad's head dwell,</span>
+				<span>If that a pearl may in a toad’s head dwell,</span>
 				<br/>
 				<span>And may be found too in an oyster-shell;</span>
 				<br/>
@@ -221,22 +221,22 @@
 				<span>What do in brave but empty notions dwell.</span>
 			</p>
 			<p>
-				<span>'Well, yet I am not fully satisfied,</span>
+				<span>‘Well, yet I am not fully satisfied,</span>
 				<br/>
-				<span>That this your book will stand, when soundly tried.'</span>
+				<span>That this your book will stand, when soundly tried.’</span>
 				<br/>
-				<span>Why, what's the matter? 'It is dark.' What though?</span>
+				<span>Why, what’s the matter? ‘It is dark.’ What though?</span>
 				<br/>
-				<span>'But it is feigned.' What of that? I trow?</span>
+				<span>‘But it is feigned.’ What of that? I trow?</span>
 				<br/>
 				<span>Some men, by feigned words, as dark as mine,</span>
 				<br/>
 				<span>Make truth to spangle and its rays to shine.</span>
 			</p>
 			<p>
-				<span>'But they want solidness.' Speak, man, thy mind.</span>
+				<span>‘But they want solidness.’ Speak, man, thy mind.</span>
 				<br/>
-				<span>'They drown the weak; metaphors make us blind.'</span>
+				<span>‘They drown the weak; metaphors make us blind.’</span>
 			</p>
 			<p>
 				<span>Solidity, indeed, becomes the pen</span>
@@ -245,7 +245,7 @@
 				<br/>
 				<span>But must I needs want solidness, because</span>
 				<br/>
-				<span>By metaphors I speak? Were not God's laws,</span>
+				<span>By metaphors I speak? Were not God’s laws,</span>
 				<br/>
 				<span>His gospel laws, in olden times held forth</span>
 				<br/>
@@ -270,7 +270,7 @@
 			<p>
 				<span>Be not too forward, therefore, to conclude</span>
 				<br/>
-				<span>That I want solidness--that I am rude;</span>
+				<span>That I want solidness⁠—that I am rude;</span>
 				<br/>
 				<span>All things solid in show not solid be;</span>
 				<br/>
@@ -299,7 +299,7 @@
 				<br/>
 				<span>Which for its style and phrase puts down all wit,</span>
 				<br/>
-				<span>Is everywhere so full of all these things--</span>
+				<span>Is everywhere so full of all these things⁠—</span>
 				<br/>
 				<span>Dark figures, allegories? Yet there springs</span>
 				<br/>
@@ -340,7 +340,7 @@
 			<p>
 				<span>Sound words, I know, Timothy is to use,</span>
 				<br/>
-				<span>And old wives' fables he is to refuse;</span>
+				<span>And old wives’ fables he is to refuse;</span>
 				<br/>
 				<span>But yet grave Paul him nowhere did forbid</span>
 				<br/>
@@ -418,13 +418,13 @@
 				<br/>
 				<span>Use it I may, then, and yet nothing smother</span>
 				<br/>
-				<span>Truth's golden beams: nay, by this method may</span>
+				<span>Truth’s golden beams: nay, by this method may</span>
 				<br/>
 				<span>Make it cast forth its rays as light as day.</span>
 				<br/>
 				<span>And now before I do put up my pen,</span>
 				<br/>
-				<span>I'll shew the profit of my book, and then</span>
+				<span>I’ll shew the profit of my book, and then</span>
 				<br/>
 				<span>Commit both thee and it unto that Hand</span>
 				<br/>
@@ -472,7 +472,7 @@
 				<br/>
 				<span>Art thou forgetful? Wouldest thou remember</span>
 				<br/>
-				<span>From New-Year's day to the last of December?</span>
+				<span>From New-Year’s day to the last of December?</span>
 				<br/>
 				<span>Then read my fancies; they will stick like burs,</span>
 				<br/>
