--- a/src/epub/text/preface-2.xhtml
+++ b/src/epub/text/preface-2.xhtml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>The Author's Way of Sending Forth His Second Part of the Pilgrim</title>
+		<title>The Author’s Way of Sending Forth His Second Part of the Pilgrim</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface-2" epub:type="preface">
-			<h2>The Author's Way of Sending Forth His Second Part of the Pilgrim</h2>
+			<h2>The Author’s Way of Sending Forth His Second Part of the Pilgrim</h2>
 			<p>
 				<span>Go now, my little book, to every place,</span>
 				<br/>
 				<span>Where my first Pilgrim has but shown his face,</span>
 				<br/>
-				<span>Call at their door. If any say, Who's there?</span>
+				<span>Call at their door. If any say, Who’s there?</span>
 				<br/>
 				<span>Then answer thou, CHRISTIANA is here.</span>
 				<br/>
 				<span>If they bid thee come in, then enter thou,</span>
 				<br/>
-				<span>With all thy boys; and then, as thou know'st how,</span>
+				<span>With all thy boys; and then, as thou know’st how,</span>
 				<br/>
 				<span>Tell who they are, also from whence they came;</span>
 				<br/>
@@ -56,7 +56,7 @@
 				<br/>
 				<span>Defenders of that way, and how they still</span>
 				<br/>
-				<span>Refuse this world, to do their Father's will.</span>
+				<span>Refuse this world, to do their Father’s will.</span>
 			</p>
 			<p>
 				<span>Go, tell them also of those dainty things,</span>
@@ -69,7 +69,7 @@
 				<br/>
 				<span>What goodly mansions for them He provides,</span>
 				<br/>
-				<span>Tho' they meet with rough winds, and swelling tides,</span>
+				<span>Tho’ they meet with rough winds, and swelling tides,</span>
 				<br/>
 				<span>How brave a calm they will enjoy at last,</span>
 				<br/>
@@ -100,7 +100,7 @@
 			</p>
 			<p>ANSWER.</p>
 			<p>
-				<span>'Tis true, some have of late, to counterfeit</span>
+				<span>’Tis true, some have of late, to counterfeit</span>
 				<br/>
 				<span>My Pilgrim, to their own my title set;<a href="endnotes.xhtml#note-593" id="noteref-593" epub:type="noteref">593</a></span>
 				<br/>
@@ -110,10 +110,10 @@
 				<br/>
 				<span>But yet they, by their features, do declare</span>
 				<br/>
-				<span>Themselves not mine to be, whose e'er they are.</span>
+				<span>Themselves not mine to be, whose e’er they are.</span>
 			</p>
 			<p>
-				<span>If such thou meet'st with, then thine only way</span>
+				<span>If such thou meet’st with, then thine only way</span>
 				<br/>
 				<span>Before them all, is, to say out thy say,</span>
 				<br/>
@@ -154,20 +154,20 @@
 				<br/>
 				<span>Are nothing else but ground for groundless fears.</span>
 				<br/>
-				<span>My Pilgrim's book has travell'd sea and land,</span>
+				<span>My Pilgrim’s book has travell’d sea and land,</span>
 				<br/>
 				<span>Yet could I never come to understand</span>
 				<br/>
-				<span>That it was slighted, or turn'd out of door</span>
+				<span>That it was slighted, or turn’d out of door</span>
 				<br/>
 				<span>By any kingdom, were they rich or poor.</span>
 			</p>
 			<p>
 				<span>In France and Flanders, where men kill each other,</span>
 				<br/>
-				<span>My Pilgrim is esteem'd a friend, a brother.</span>
+				<span>My Pilgrim is esteem’d a friend, a brother.</span>
 				<br/>
-				<span>In Holland too, 'tis said, as I am told,</span>
+				<span>In Holland too, ’tis said, as I am told,</span>
 				<br/>
 				<span>My Pilgrim is with some worth more than gold.</span>
 			</p>
@@ -176,11 +176,11 @@
 				<br/>
 				<span>My Pilgrim should familiar with them be.</span>
 				<br/>
-				<span>'Tis in New England under such advance,</span>
+				<span>’Tis in New England under such advance,</span>
 				<br/>
 				<span>Receives there so much loving countenance,</span>
 				<br/>
-				<span>As to be trimm'd, new cloth'd, and deck'd with gems</span>
+				<span>As to be trimm’d, new cloth’d, and deck’d with gems</span>
 				<br/>
 				<span>That it may show its features and its limbs,</span>
 				<br/>
@@ -195,7 +195,7 @@
 				<br/>
 				<span>City and country will him entertain</span>
 				<br/>
-				<span>With, Welcome Pilgrim; yea, they can't refrain</span>
+				<span>With, Welcome Pilgrim; yea, they can’t refrain</span>
 				<br/>
 				<span>From smiling, if my Pilgrim be but by,</span>
 				<br/>
@@ -208,7 +208,7 @@
 				<br/>
 				<span>Things of a greater bulk: yea, with delight,</span>
 				<br/>
-				<span>Say, My lark's leg is better than a kite.</span>
+				<span>Say, My lark’s leg is better than a kite.</span>
 			</p>
 			<p>
 				<span>Young ladies, and young gentlewomen too,</span>
@@ -217,7 +217,7 @@
 				<br/>
 				<span>Their cabinets, their bosoms, and their hearts,</span>
 				<br/>
-				<span>My Pilgrim has, 'cause he to them imparts</span>
+				<span>My Pilgrim has, ‘cause he to them imparts</span>
 				<br/>
 				<span>His pretty riddles in such wholesome strains,</span>
 				<br/>
@@ -255,17 +255,17 @@
 				<span>And to those whom they love, they do him send.<a href="endnotes.xhtml#note-596" id="noteref-596" epub:type="noteref">596</a></span>
 			</p>
 			<p>
-				<span>Wherefore, my Second Part, thou need'st not be</span>
+				<span>Wherefore, my Second Part, thou need’st not be</span>
 				<br/>
 				<span>Afraid to show thy head; none can hurt thee,</span>
 				<br/>
 				<span>That wish but well to him that went before,</span>
 				<br/>
-				<span>'Cause thou com'st after with a second store</span>
+				<span>‘Cause thou com’st after with a second store</span>
 				<br/>
 				<span>Of things as good, as rich, as profitable,</span>
 				<br/>
-				<span>For young, for old, for stagg'ring, and for stable.</span>
+				<span>For young, for old, for stagg’ring, and for stable.</span>
 			</p>
 			<p>OBJECTION 3.</p>
 			<p>
@@ -281,11 +281,11 @@
 			<p>
 				<span>One may, I think, say, Both his laughs and cries,</span>
 				<br/>
-				<span>May well be guess'd at by his wat'ry eyes.</span>
+				<span>May well be guess’d at by his wat’ry eyes.</span>
 				<br/>
 				<span>Some things are of that nature, as to make</span>
 				<br/>
-				<span>One's fancy chuckle, while his heart doth ache.</span>
+				<span>One’s fancy chuckle, while his heart doth ache.</span>
 				<br/>
 				<span>When Jacob saw his Rachel with the sheep,</span>
 				<br/>
@@ -294,7 +294,7 @@
 			<p>
 				<span>Whereas some say, A cloud is in his head,</span>
 				<br/>
-				<span>That doth but show how wisdom's covered</span>
+				<span>That doth but show how wisdom’s covered</span>
 				<br/>
 				<span>With its own mantles, and to stir the mind</span>
 				<br/>
@@ -326,11 +326,11 @@
 				<span>To thee, thy Pilgrims, and thy words embrace.</span>
 			</p>
 			<p>
-				<span>Besides, what my first Pilgrim left conceal'd</span>
+				<span>Besides, what my first Pilgrim left conceal’d</span>
 				<br/>
-				<span>Thou, my brave second Pilgrim, hast reveal'd;</span>
+				<span>Thou, my brave second Pilgrim, hast reveal’d;</span>
 				<br/>
-				<span>What CHRISTIAN left lock'd up, and went his way,</span>
+				<span>What CHRISTIAN left lock’d up, and went his way,</span>
 				<br/>
 				<span>Sweet CHRISTIANA opens with her key.<a href="endnotes.xhtml#note-597" id="noteref-597" epub:type="noteref">597</a></span>
 			</p>
@@ -338,7 +338,7 @@
 			<p>
 				<span>But some love not the method of your first;</span>
 				<br/>
-				<span>Romance they count it, throw't away as dust,</span>
+				<span>Romance they count it, throw’t away as dust,</span>
 				<br/>
 				<span>If I should meet with such, what should I say?</span>
 				<br/>
@@ -354,7 +354,7 @@
 				<br/>
 				<span>But if they frown, I prithee on them smile;</span>
 				<br/>
-				<span>Perhaps 'tis nature, or some ill report,</span>
+				<span>Perhaps ’tis nature, or some ill report,</span>
 				<br/>
 				<span>Has made them thus despise, or thus retort.</span>
 			</p>
@@ -373,7 +373,7 @@
 				<br/>
 				<span>By no means strive, but in humble-wise,</span>
 				<br/>
-				<span>Present thee to them in thy Pilgrim's guise.</span>
+				<span>Present thee to them in thy Pilgrim’s guise.</span>
 			</p>
 			<p>
 				<span>Go, then, my little book, and show to all</span>
@@ -402,13 +402,13 @@
 				<br/>
 				<span>That now do go on pilgrimage with thee;</span>
 				<br/>
-				<span>Say, Here's my neighbour, Mercy, she is one</span>
+				<span>Say, Here’s my neighbour, Mercy, she is one</span>
 				<br/>
 				<span>That has long time with me a Pilgrim gone.</span>
 				<br/>
 				<span>Come, see her in her virgin race, and learn</span>
 				<br/>
-				<span>'Twixt idle ones and Pilgrims to discern.</span>
+				<span>’Twixt idle ones and Pilgrims to discern.</span>
 				<br/>
 				<span>Yea, let young damsels learn of her to prize</span>
 				<br/>
@@ -418,14 +418,14 @@
 				<br/>
 				<span>And leave old doting sinners to His rod;</span>
 				<br/>
-				<span>'Tis like those days wherein the young ones cried,</span>
+				<span>’Tis like those days wherein the young ones cried,</span>
 				<br/>
 				<span>Hosanna! to whom old ones did deride.</span>
 			</p>
 			<p>
 				<span>Next, tell them of old Honest, who you found</span>
 				<br/>
-				<span>With his white hairs, treading the Pilgrim's ground.</span>
+				<span>With his white hairs, treading the Pilgrim’s ground.</span>
 				<br/>
 				<span>Yea, tell them how plain-hearted this man was,</span>
 				<br/>
@@ -504,12 +504,12 @@
 				<br/>
 				<span>Then turn about, my book, and touch these strings,</span>
 				<br/>
-				<span>Which, if but touch'd, will such music make,</span>
+				<span>Which, if but touch’d, will such music make,</span>
 				<br/>
-				<span>They'll make a cripple dance, a giant quake.</span>
+				<span>They’ll make a cripple dance, a giant quake.</span>
 			</p>
 			<p>
-				<span>These riddles that lie couch'd within thy breast,</span>
+				<span>These riddles that lie couch’d within thy breast,</span>
 				<br/>
 				<span>Freely propound, expound; and for the rest</span>
 				<br/>
@@ -528,7 +528,7 @@
 				<br/>
 				<span>Yea, may this Second Pilgrim yield that fruit,</span>
 				<br/>
-				<span>As may with each good Pilgrim's fancy suit;</span>
+				<span>As may with each good Pilgrim’s fancy suit;</span>
 				<br/>
 				<span>And may it persuade some that go astray,</span>
 				<br/>
