[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/preface-1.xhtml
+++ b/src/epub/text/preface-1.xhtml
@@ -50,7 +50,7 @@
 			<p>
 				<span>Well, so I did; but yet I did not think</span>
 				<br/>
-				<span>To shew to all the world my pen and ink</span>
+				<span>To show to all the world my pen and ink</span>
 				<br/>
 				<span>In such a mode; I only thought to make</span>
 				<br/>
@@ -85,7 +85,7 @@
 			<p>
 				<span>Well, when I had thus put mine ends together,</span>
 				<br/>
-				<span>I shewed them others, that I might see whether</span>
+				<span>I showed them others, that I might see whether</span>
 				<br/>
 				<span>They would condemn them, or them justify:</span>
 				<br/>
@@ -382,7 +382,7 @@
 				<br/>
 				<span>God better pleased, by their words or ways,</span>
 				<br/>
-				<span>Than any man that breatheth now-a-days)</span>
+				<span>Than any man that breatheth nowadays)</span>
 				<br/>
 				<span>Thus to express my mind, thus to declare</span>
 				<br/>
@@ -424,7 +424,7 @@
 				<br/>
 				<span>And now before I do put up my pen,</span>
 				<br/>
-				<span>I’ll shew the profit of my book, and then</span>
+				<span>I’ll show the profit of my book, and then</span>
 				<br/>
 				<span>Commit both thee and it unto that Hand</span>
 				<br/>
@@ -435,7 +435,7 @@
 				<br/>
 				<span>The man that seeks the everlasting prize;</span>
 				<br/>
-				<span>It shews you whence he comes, whither he goes;</span>
+				<span>It shows you whence he comes, whither he goes;</span>
 				<br/>
 				<span>What he leaves undone, also what he does;</span>
 				<br/>
