--- a/src/epub/text/preface-1.xhtml
+++ b/src/epub/text/preface-1.xhtml
@@ -6,6 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
+		<section id="part-1" epub:type="part">
 		<section id="preface-1" epub:type="preface">
 			<h2>The Author’s Apology for His Book</h2>
 			<p>
@@ -517,8 +518,9 @@
 				<span>And lay my book, thy head, and heart together.</span>
 			</p>
 			<footer>
-				<p>JOHN BUNYAN</p>
+				<p>John Bunyan</p>
 			</footer>
+		</section>
 		</section>
 	</body>
 </html>
