--- a/src/epub/text/preface-2.xhtml
+++ b/src/epub/text/preface-2.xhtml
@@ -6,6 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
+		<section id="part-2" epub:type="part">
 		<section id="preface-2" epub:type="preface">
 			<h2>The Author’s Way of Sending Forth His Second Part of the Pilgrim</h2>
 			<p>
@@ -540,9 +541,10 @@
 				<p>
 					<span>The Author,</span>
 					<br/>
-					<span>JOHN BUNYAN.</span>
+					<span>John Bunyan</span>
 				</p>
 			</footer>
+		</section>
 		</section>
 	</body>
 </html>
