--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,18 +12,18 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Pilgrim's Progress</i><br/>
-			was published in YEAR by<br/>
+			was published in 1678 by<br/>
 			<a href="https://en.wikipedia.org/wiki/John_Bunyan">John Bunyan</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://rightword.com,au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2004 by<br/>
-			<b class="name">TRANSCRIBER_1</b>, <b class="name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b class="name">Charles Aldarondo</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/6048">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/worksofjohnbunya03buny">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
 			a painting completed in YEAR by<br/>
@@ -35,7 +35,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/john-bunyan/the-pilgrims-progress">standardebooks.org/ebooks/john-bunyan/the-pilgrims-progress</a>.</p>
+			<a href="https://standardebooks.org/ebooks/john-bunyan_charles-offor/the-pilgrims-progress">standardebooks.org/ebooks/john-bunyan/the-pilgrims-progress</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
