--- a/src/epub/text/part-2-1.xhtml
+++ b/src/epub/text/part-2-1.xhtml
@@ -7,7 +7,8 @@
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-2" epub:type="part">
-			<section id="chapter-2-1" epub:type="chapter">
+			<section id="part-2-1" epub:type="chapter">
+				<h2 epub:type="title">Part <span epub:type="z3998:roman">II</span></h2>
 				<p>“I have used similitudes.”⁠—Hosea 12:10.</p>
 				<p>
 					<b>Courteous Companions,</b>
