--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,24 +14,19 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span></a>
+					<a href="text/halftitle.xhtml">The Pilgrim’s Progress</a>
 					<ol>
 						<li>
 							<a href="text/preface-1.xhtml">The Author’s Apology for His Book</a>
 						</li>
 						<li>
-							<a href="text/chapter-1-1.xhtml">Chapter 1</a>
+							<a href="text/part-1-1.xhtml">Part <span epub:type="z3998:roman">I</span></a>
 						</li>
-					</ol>
-				</li>
-				<li>
-					<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span></a>
-					<ol>
 						<li>
 							<a href="text/preface-2.xhtml">The Author’s Way of Sending Forth His Second Part of the Pilgrim</a>
 						</li>
 						<li>
-							<a href="text/chapter-2-1.xhtml">Chapter 2</a>
+							<a href="text/part-2-1.xhtml">Part <span epub:type="z3998:roman">II</span></a>
 						</li>
 					</ol>
 				</li>
@@ -56,13 +51,16 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
 					<a href="text/preface-1.xhtml" epub:type="frontmatter preface">The Author’s Apology for His Book</a>
 				</li>
 				<li>
-					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">The Pilgrim's Progress</a>
+					<a href="text/preface-2.xhtml" epub:type="frontmatter preface">The Author’s Way of Sending Forth His Second Part of the Pilgrim</a>
 				</li>
 				<li>
-					<a href="text/preface-2.xhtml" epub:type="frontmatter preface">The Author’s Way of Sending Forth His Second Part of the Pilgrim</a>
+					<a href="text/part-1-1.xhtml" epub:type="bodymatter z3998:fiction">The Pilgrim’s Progress</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
