[Editorial] profest -> professed

--- a/src/epub/text/part-1-1.xhtml
+++ b/src/epub/text/part-1-1.xhtml
@@ -671,7 +671,7 @@
 				<p>Now I saw that there stood behind the multitude, a chariot and a couple of horses, waiting for Faithful, who (so soon as his adversaries had despatched him) was taken up into it, and straightway was carried up through the clouds, with sound of trumpet, the nearest way to the Celestial Gate.<a href="endnotes.xhtml#note-293" id="noteref-293" epub:type="noteref">293</a> But as for Christian, he had some respite, and was remanded back to prison. So he there remained for a space; but He that overrules all things, having the power of their rage in His own hand, so wrought it about, that Christian for that time escaped them, and went his way;<a href="endnotes.xhtml#note-294" id="noteref-294" epub:type="noteref">294</a> and as he went, he sang, saying-</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
-						<span>Well, Faithful, thou hast faithfully profest</span>
+						<span>Well, Faithful, thou hast faithfully professed</span>
 						<br/>
 						<span>Unto thy Lord; with whom thou shalt be blest,</span>
 						<br/>
