--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,9 +25,9 @@
 			and on digital scans available at the<br/>
 			<a href="https://archive.org/details/worksofjohnbunya03buny">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<b class="name">ARTIST</b>.<br/>
+			<i epub:type="se:name.visual-art.painting">Crusaders Before Jerusalem</i>,<br/>
+			a painting completed in 1860 by<br/>
+			<b class="name">Wilhelm von Kaulbach</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
@@ -35,7 +35,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/john-bunyan_charles-offor/the-pilgrims-progress">standardebooks.org/ebooks/john-bunyan_charles-offor/the-pilgrims-progress</a>.</p>
+			<a href="https://standardebooks.org/ebooks/john-bunyan/the-pilgrims-progress">standardebooks.org/ebooks/john-bunyan/the-pilgrims-progress</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
