Fixed some lint issues.

--- a/src/epub/text/preface-2.xhtml
+++ b/src/epub/text/preface-2.xhtml
@@ -235,7 +235,7 @@
 						<br/>
 						<span>Their cabinets, their bosoms, and their hearts,</span>
 						<br/>
-						<span>My Pilgrim has, ‘cause he to them imparts</span>
+						<span>My Pilgrim has, ’cause he to them imparts</span>
 						<br/>
 						<span>His pretty riddles in such wholesome strains,</span>
 						<br/>
