--- a/src/epub/text/part-2.xhtml
+++ b/src/epub/text/part-2.xhtml
@@ -7,11 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-2" epub:type="chapter">
-			<h2 epub:type="title">The Second Part</h2>
-			<blockquote epub:type="epigraph">
-				<p>“I have used similitudes.”</p>
-				<cite>Hosea 12:10.</cite>
-			</blockquote>
+			<header>
+				<h2 epub:type="title">The Second Part</h2>
+				<blockquote epub:type="epigraph">
+					<p>“I have used similitudes.”</p>
+					<cite>Hosea 12:10</cite>
+				</blockquote>
+			</header>
 			<p>
 				<b>Courteous Companions,</b>
 			</p>
@@ -839,7 +841,7 @@
 			<p>Then said <abbr>Mr.</abbr> Feeble-mind, This is unexpected favour, and as the sun shining out of a very dark cloud. Did Giant Slay-good intend me this favour when he stopped me, and resolved to let me go no further? Did he intend, that after he had rifled my pockets, I should go to Gaius, mine host? Yet so it is.<a href="endnotes.xhtml#note-888" id="noteref-888" epub:type="noteref">888</a></p>
 			<p>Now, just as <abbr>Mr.</abbr> Feeble-mind and Gaius were thus in talk, there comes one running, and called at the door, and told that, about a mile and a half off, there was one <abbr>Mr.</abbr> Not-right, a pilgrim, struck dead upon the place where he was with a thunderbolt.<a href="endnotes.xhtml#note-889" id="noteref-889" epub:type="noteref">889</a></p>
 			<p><b><abbr class="name">Feeble.</abbr></b> Alas! said <abbr>Mr.</abbr> Feeble-mind, is he slain? He overtook me some days before I came so far as hither, and would be my company-keeper. He also was with me when Slay-good, the giant, took me; but he was nimble of his heels, and escaped. But, it seems, he escaped to die, and I was took to live.<a href="endnotes.xhtml#note-890" id="noteref-890" epub:type="noteref">890</a></p>
-			<blockquote>
+			<blockquote epub:type="z3998:verse">
 				<p>
 					<span>What, one would think, doth seek to slay outright,</span>
 					<br/>
