--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -3386,7 +3386,10 @@
 							<span>And make Despair the Giant live again.</span>
 						</p>
 					</blockquote>
-					<p><cite>—Editor</cite> <a href="part-2.xhtml#noteref-929" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—Editor</cite>
+						<a href="part-2.xhtml#noteref-929" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-930" epub:type="endnote">
 					<p>How well does <abbr>Mr.</abbr> Bunyan describe the experience of the Much-afraids, Ready-to-halts, and the Feeble-minds, in the <i epub:type="se:name.publication.book">Come and Welcome</i>. “Poor coming soul, thou art like the man that would ride full gallop, whose horse will hardly trot! Now, the desire of his mind is not to be judged of by the slow pace of the dull jade he rides on, but by the hitching, and kicking, and spurring, as he sits on his back. Thy flesh is like this dull jade; it will not gallop after Christ, it will be backward, though thy soul and Heaven lie at stake. But be of good comfort, Christ judgeth according to the sincerity of the heart.” <cite>—<abbr>Vol.</abbr> 1, <abbr>p.</abbr> 252</cite> <a href="part-2.xhtml#noteref-930" epub:type="backlink">↩</a></p>
