Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/preface-1.xhtml
+++ b/src/epub/text/preface-1.xhtml
@@ -519,7 +519,7 @@
 				</p>
 			</blockquote>
 			<footer>
-				<p class="signature">John Bunyan</p>
+				<p epub:type="z3998:signature">John Bunyan</p>
 			</footer>
 		</section>
 	</body>
