--- a/src/epub/text/preface-2.xhtml
+++ b/src/epub/text/preface-2.xhtml
@@ -572,7 +572,7 @@
 			</blockquote>
 			<footer>
 				<p>The Author,</p>
-				<p class="signature">John Bunyan</p>
+				<p epub:type="z3998:signature">John Bunyan</p>
 			</footer>
 		</section>
 	</body>
