--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -360,7 +360,7 @@
 				</li>
 				<li id="note-113" epub:type="endnote">
 					<p>Zechariah 12:10.</p>
-					<p>This efficacious sight of the cross is thus narrated in <i epub:type="se:name.publication.book">Grace Abounding</i>, (<abbr>No.</abbr> 115)-“Traveling in the country, and musing on the wickedness and blasphemy of my heart, that scripture came in my mind⁠—‘Having made peace through the blood of His cross” (Colossians 1:20). I saw that day again and again, that God and my soul were friends by His blood; yea, that the justice of God and my soul could embrace and kiss each other. This was a good day to me; I hope I shall not forget it.’ He was glad and lightsome, and had a merry heart; he was before inspired with hope, but now he is a happy believer.” <cite>—Editor</cite>. <a href="part-1.xhtml#noteref-113" epub:type="backlink">↩</a></p>
+					<p>This efficacious sight of the cross is thus narrated in <i epub:type="se:name.publication.book">Grace Abounding</i>, (<abbr>No.</abbr> 115)-“Traveling in the country, and musing on the wickedness and blasphemy of my heart, that scripture came in my mind⁠—‘Having made peace through the blood of His cross.’ (Colossians 1:20). I saw that day again and again, that God and my soul were friends by His blood; yea, that the justice of God and my soul could embrace and kiss each other. This was a good day to me; I hope I shall not forget it.” He was glad and lightsome, and had a merry heart; he was before inspired with hope, but now he is a happy believer. <cite>—Editor</cite>. <a href="part-1.xhtml#noteref-113" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-114" epub:type="endnote">
 					<p>Mark 2:15. <a href="part-1.xhtml#noteref-114" epub:type="backlink">↩</a></p>
