Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/foreword.xhtml">Works from Which Notes to This Edition Have Been Selected</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Pilgrim’s Progress</a>
+					<a href="text/halftitlepage.xhtml">The Pilgrim’s Progress</a>
 					<ol>
 						<li>
 							<a href="text/preface-1.xhtml">The Author’s Apology for His Book</a>
@@ -57,7 +57,7 @@
 					<a href="text/foreword.xhtml" epub:type="frontmatter foreword">Works from Which Notes to This Edition Have Been Selected</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/preface-1.xhtml" epub:type="frontmatter preface">The Author’s Apology for His Book</a>
