--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1838,13 +1838,13 @@
 					<p>Isaiah 62:5. <a href="part-1.xhtml#noteref-518" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-519" epub:type="endnote">
-					<p>v. 8. <a href="part-1.xhtml#noteref-519" epub:type="backlink">↩</a></p>
+					<p><abbr>V.</abbr> 8. <a href="part-1.xhtml#noteref-519" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-520" epub:type="endnote">
-					<p>v. 11. <a href="part-1.xhtml#noteref-520" epub:type="backlink">↩</a></p>
+					<p><abbr>V.</abbr> 11. <a href="part-1.xhtml#noteref-520" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-521" epub:type="endnote">
-					<p>v. 12. <a href="part-1.xhtml#noteref-521" epub:type="backlink">↩</a></p>
+					<p><abbr>V.</abbr> 12. <a href="part-1.xhtml#noteref-521" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-522" epub:type="endnote">
 					<p>In the immediate view of heavenly felicity, Paul “desired to depart hence, and be with Christ, as far better” than life. David “fainted for God’s salvation.” In the lively exercise of holy affections, the believer grows weary of this sinful world, longs to have his faith changed for sight, his hope swallowed up in enjoyment, and his love perfected. <cite>—Scott</cite> <a href="part-1.xhtml#noteref-522" epub:type="backlink">↩</a></p>
