[Editorial] divers -> diverse

--- a/src/epub/text/preface-1.xhtml
+++ b/src/epub/text/preface-1.xhtml
@@ -186,7 +186,7 @@
 				<p>
 					<span>How does the fowler seek to catch his game</span>
 					<br/>
-					<span>By divers means! all which one cannot name:</span>
+					<span>By diverse means! all which one cannot name:</span>
 					<br/>
 					<span>His guns, his nets, his lime-twigs, light, and bell:</span>
 					<br/>
