--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1731,7 +1731,7 @@
 					<p>Proverbs 28:26. <a href="part-1.xhtml#noteref-483" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-484" epub:type="endnote">
-					<p>The desire of Heaven-when its nature is not understood, the proper means of obtaining it are neglected, other objects are preferred to it⁠—is no proof that a man will be saved. The expression, “The desire of grace is grace,” is very fallacious. But to hunger and thirst for God, and His righteousness, His favour, image, and service, as the supreme good, so that no other object can satisfy the heart, is grace indeed, and shall be completed in glory. <cite>—⁠Scott</cite> <a href="part-1.xhtml#noteref-484" epub:type="backlink">↩</a></p>
+					<p>The desire of Heaven⁠—when its nature is not understood, the proper means of obtaining it are neglected, other objects are preferred to it⁠—is no proof that a man will be saved. The expression, “The desire of grace is grace,” is very fallacious. But to hunger and thirst for God, and His righteousness, His favour, image, and service, as the supreme good, so that no other object can satisfy the heart, is grace indeed, and shall be completed in glory. <cite>—⁠Scott</cite> <a href="part-1.xhtml#noteref-484" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-485" epub:type="endnote">
 					<p>Proverbs 13:4. <a href="part-1.xhtml#noteref-485" epub:type="backlink">↩</a></p>
