--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2004 by<br/>
-			<b class="name">Charles Aldarondo</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Charles Aldarondo</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/6048">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
@@ -27,7 +27,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Crusaders Before Jerusalem</i>,<br/>
 			a painting completed in 1860 by<br/>
-			<b class="name">Wilhelm von Kaulbach</b>.<br/>
+			<b epub:type="z3998:personal-name">Wilhelm von Kaulbach</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
