--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -795,7 +795,7 @@
 					<p>Romans 7:24. <a href="part-1.xhtml#noteref-218" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-219" epub:type="endnote">
-					<p>That sinner who never had a threatening fiery visit from Moses, is yet asleep in his sins, under the curse and wrath of the law of God. <cite>—⁠<abbr class="name">C. C. V. G.</abbr></cite> <a href="part-1.xhtml#noteref-219" epub:type="backlink">↩</a></p>
+					<p>That sinner who never had a threatening fiery visit from Moses, is yet asleep in his sins, under the curse and wrath of the law of God. <cite>—⁠<abbr epub:type="z3998:personal-name">C. C. V. G.</abbr></cite> <a href="part-1.xhtml#noteref-219" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-220" epub:type="endnote">
 					<p>As the law giveth no strength, nor life to keep it, so it accepteth none of them that are under it. Sin and Die, is forever its language. There is no middle way in the law. It hath not ears to hear, nor heart to pity, its penitent ones. <cite>—⁠<i epub:type="se:name.publication.book">Bunyan on Justification</i>, <abbr>vol.</abbr> 1, <abbr>p.</abbr> 316</cite> <a href="part-1.xhtml#noteref-220" epub:type="backlink">↩</a></p>
